
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int i8 ;
typedef int i32 ;



void bf_error(i8* B){
              i32 e;
             if(B==((void*)0))
               e=0;
               else
                   e=1;
        }
